.antlr/ParserRulesParser.java
// Generated from c://Users//marci//Desktop//Structural Language//ParserRules.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ParserRulesParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DIGIT=1, NUMBER=2, DECIMAL=3, ALPHA=4, IDENTIFIER=5, UNARYOP=6, BINARYMATH=7, 
		BINARYBITWISE=8, BINARYLOGIC=9, TYPE=10, BOOLVAL=11, FOR=12, LCURLYBRACKET=13, 
		RCURLYBRACKET=14, LSQUAREBRACKET=15, RSQUAREBRACKET=16, SEMICOLON=17, 
		ENUM=18, STRUCT=19, EQUAL=20, COMMA=21, DOT=22, LPARENTHESIS=23, RPARENTHESIS=24, 
		WHILE=25, DO=26, SWITCH=27, DEFAULT=28, CASE=29, CONTINUE=30, BREAK=31, 
		COLON=32, QUESTIONMARK=33, RETURN=34, WS=35;
	public static final int
		RULE_program = 0, RULE_definition = 1, RULE_structDefinition = 2, RULE_enumerableDefinition = 3, 
		RULE_function = 4, RULE_variableDeclaration = 5, RULE_arrayDeclaration = 6, 
		RULE_arrayAssignment = 7, RULE_statement = 8, RULE_block = 9, RULE_expressionStatement = 10, 
		RULE_whileStatement = 11, RULE_forStatement = 12, RULE_doWhileStatement = 13, 
		RULE_switchStatement = 14, RULE_case = 15, RULE_returnStatement = 16, 
		RULE_breakStatement = 17, RULE_continueStatement = 18, RULE_expression = 19, 
		RULE_ternary = 20, RULE_binary = 21, RULE_primary = 22, RULE_unary = 23, 
		RULE_grouping = 24, RULE_arrayAccess = 25, RULE_call = 26, RULE_typeCast = 27, 
		RULE_assignment = 28, RULE_fieldAccess = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "definition", "structDefinition", "enumerableDefinition", 
			"function", "variableDeclaration", "arrayDeclaration", "arrayAssignment", 
			"statement", "block", "expressionStatement", "whileStatement", "forStatement", 
			"doWhileStatement", "switchStatement", "case", "returnStatement", "breakStatement", 
			"continueStatement", "expression", "ternary", "binary", "primary", "unary", 
			"grouping", "arrayAccess", "call", "typeCast", "assignment", "fieldAccess"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'for'", "'{'", "'}'", "'['", "']'", "';'", "'enum'", "'struct'", "'='", 
			"','", "'.'", "'('", "')'", "'while'", "'do'", "'switch'", "'default'", 
			"'case'", "'continue'", "'break'", "':'", "'?'", "'return'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DIGIT", "NUMBER", "DECIMAL", "ALPHA", "IDENTIFIER", "UNARYOP", 
			"BINARYMATH", "BINARYBITWISE", "BINARYLOGIC", "TYPE", "BOOLVAL", "FOR", 
			"LCURLYBRACKET", "RCURLYBRACKET", "LSQUAREBRACKET", "RSQUAREBRACKET", 
			"SEMICOLON", "ENUM", "STRUCT", "EQUAL", "COMMA", "DOT", "LPARENTHESIS", 
			"RPARENTHESIS", "WHILE", "DO", "SWITCH", "DEFAULT", "CASE", "CONTINUE", 
			"BREAK", "COLON", "QUESTIONMARK", "RETURN", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ParserRules.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ParserRulesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 787456L) != 0)) {
				{
				{
				setState(60);
				definition();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends ParserRuleContext {
		public StructDefinitionContext structDefinition() {
			return getRuleContext(StructDefinitionContext.class,0);
		}
		public EnumerableDefinitionContext enumerableDefinition() {
			return getRuleContext(EnumerableDefinitionContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public ArrayDeclarationContext arrayDeclaration() {
			return getRuleContext(ArrayDeclarationContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definition);
		try {
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				structDefinition();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				enumerableDefinition();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(68);
				variableDeclaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(69);
				function();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(70);
				arrayDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StructDefinitionContext extends ParserRuleContext {
		public TerminalNode STRUCT() { return getToken(ParserRulesParser.STRUCT, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(ParserRulesParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ParserRulesParser.IDENTIFIER, i);
		}
		public TerminalNode LCURLYBRACKET() { return getToken(ParserRulesParser.LCURLYBRACKET, 0); }
		public TerminalNode RCURLYBRACKET() { return getToken(ParserRulesParser.RCURLYBRACKET, 0); }
		public List<TerminalNode> TYPE() { return getTokens(ParserRulesParser.TYPE); }
		public TerminalNode TYPE(int i) {
			return getToken(ParserRulesParser.TYPE, i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(ParserRulesParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(ParserRulesParser.SEMICOLON, i);
		}
		public List<TerminalNode> LSQUAREBRACKET() { return getTokens(ParserRulesParser.LSQUAREBRACKET); }
		public TerminalNode LSQUAREBRACKET(int i) {
			return getToken(ParserRulesParser.LSQUAREBRACKET, i);
		}
		public List<TerminalNode> RSQUAREBRACKET() { return getTokens(ParserRulesParser.RSQUAREBRACKET); }
		public TerminalNode RSQUAREBRACKET(int i) {
			return getToken(ParserRulesParser.RSQUAREBRACKET, i);
		}
		public StructDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structDefinition; }
	}

	public final StructDefinitionContext structDefinition() throws RecognitionException {
		StructDefinitionContext _localctx = new StructDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_structDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(STRUCT);
			setState(74);
			match(IDENTIFIER);
			setState(75);
			match(LCURLYBRACKET);
			setState(83); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(76);
				match(TYPE);
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LSQUAREBRACKET) {
					{
					setState(77);
					match(LSQUAREBRACKET);
					setState(78);
					match(RSQUAREBRACKET);
					}
				}

				setState(81);
				match(IDENTIFIER);
				setState(82);
				match(SEMICOLON);
				}
				}
				setState(85); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TYPE );
			setState(87);
			match(RCURLYBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EnumerableDefinitionContext extends ParserRuleContext {
		public TerminalNode ENUM() { return getToken(ParserRulesParser.ENUM, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(ParserRulesParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ParserRulesParser.IDENTIFIER, i);
		}
		public TerminalNode LCURLYBRACKET() { return getToken(ParserRulesParser.LCURLYBRACKET, 0); }
		public TerminalNode RCURLYBRACKET() { return getToken(ParserRulesParser.RCURLYBRACKET, 0); }
		public List<TerminalNode> EQUAL() { return getTokens(ParserRulesParser.EQUAL); }
		public TerminalNode EQUAL(int i) {
			return getToken(ParserRulesParser.EQUAL, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(ParserRulesParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(ParserRulesParser.NUMBER, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ParserRulesParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ParserRulesParser.COMMA, i);
		}
		public EnumerableDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumerableDefinition; }
	}

	public final EnumerableDefinitionContext enumerableDefinition() throws RecognitionException {
		EnumerableDefinitionContext _localctx = new EnumerableDefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_enumerableDefinition);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(ENUM);
			setState(90);
			match(IDENTIFIER);
			setState(91);
			match(LCURLYBRACKET);
			setState(92);
			match(IDENTIFIER);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EQUAL) {
				{
				setState(93);
				match(EQUAL);
				setState(94);
				match(NUMBER);
				}
			}

			setState(105);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(97);
					match(COMMA);
					setState(98);
					match(IDENTIFIER);
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==EQUAL) {
						{
						setState(99);
						match(EQUAL);
						setState(100);
						match(NUMBER);
						}
					}

					}
					} 
				}
				setState(107);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(108);
				match(COMMA);
				}
			}

			setState(111);
			match(RCURLYBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ParserRuleContext {
		public List<TerminalNode> TYPE() { return getTokens(ParserRulesParser.TYPE); }
		public TerminalNode TYPE(int i) {
			return getToken(ParserRulesParser.TYPE, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(ParserRulesParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ParserRulesParser.IDENTIFIER, i);
		}
		public TerminalNode LPARENTHESIS() { return getToken(ParserRulesParser.LPARENTHESIS, 0); }
		public TerminalNode RPARENTHESIS() { return getToken(ParserRulesParser.RPARENTHESIS, 0); }
		public TerminalNode LCURLYBRACKET() { return getToken(ParserRulesParser.LCURLYBRACKET, 0); }
		public TerminalNode RCURLYBRACKET() { return getToken(ParserRulesParser.RCURLYBRACKET, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ParserRulesParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ParserRulesParser.COMMA, i);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(TYPE);
			setState(114);
			match(IDENTIFIER);
			setState(115);
			match(LPARENTHESIS);
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TYPE) {
				{
				setState(116);
				match(TYPE);
				setState(117);
				match(IDENTIFIER);
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(118);
					match(COMMA);
					setState(119);
					match(TYPE);
					setState(120);
					match(IDENTIFIER);
					}
					}
					setState(125);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(128);
			match(RPARENTHESIS);
			setState(129);
			match(LCURLYBRACKET);
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 20644379756L) != 0)) {
				{
				{
				setState(130);
				statement();
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(136);
			match(RCURLYBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableDeclarationContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(ParserRulesParser.TYPE, 0); }
		public TerminalNode SEMICOLON() { return getToken(ParserRulesParser.SEMICOLON, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(ParserRulesParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ParserRulesParser.IDENTIFIER, i);
		}
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ParserRulesParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ParserRulesParser.COMMA, i);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variableDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(TYPE);
			setState(141);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(139);
				match(IDENTIFIER);
				}
				break;
			case 2:
				{
				setState(140);
				assignment();
				}
				break;
			}
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(143);
				match(COMMA);
				setState(146);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
				case 1:
					{
					setState(144);
					match(IDENTIFIER);
					}
					break;
				case 2:
					{
					setState(145);
					assignment();
					}
					break;
				}
				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(153);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArrayDeclarationContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(ParserRulesParser.TYPE, 0); }
		public TerminalNode LSQUAREBRACKET() { return getToken(ParserRulesParser.LSQUAREBRACKET, 0); }
		public TerminalNode RSQUAREBRACKET() { return getToken(ParserRulesParser.RSQUAREBRACKET, 0); }
		public TerminalNode SEMICOLON() { return getToken(ParserRulesParser.SEMICOLON, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(ParserRulesParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ParserRulesParser.IDENTIFIER, i);
		}
		public List<ArrayAssignmentContext> arrayAssignment() {
			return getRuleContexts(ArrayAssignmentContext.class);
		}
		public ArrayAssignmentContext arrayAssignment(int i) {
			return getRuleContext(ArrayAssignmentContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ParserRulesParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ParserRulesParser.COMMA, i);
		}
		public ArrayDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayDeclaration; }
	}

	public final ArrayDeclarationContext arrayDeclaration() throws RecognitionException {
		ArrayDeclarationContext _localctx = new ArrayDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_arrayDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(TYPE);
			setState(156);
			match(LSQUAREBRACKET);
			setState(157);
			match(RSQUAREBRACKET);
			setState(160);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				{
				setState(158);
				match(IDENTIFIER);
				}
				break;
			case 2:
				{
				setState(159);
				arrayAssignment();
				}
				break;
			}
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(162);
				match(COMMA);
				setState(165);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
				case 1:
					{
					setState(163);
					match(IDENTIFIER);
					}
					break;
				case 2:
					{
					setState(164);
					arrayAssignment();
					}
					break;
				}
				}
				}
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(172);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArrayAssignmentContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ParserRulesParser.IDENTIFIER, 0); }
		public TerminalNode EQUAL() { return getToken(ParserRulesParser.EQUAL, 0); }
		public TerminalNode TYPE() { return getToken(ParserRulesParser.TYPE, 0); }
		public TerminalNode LSQUAREBRACKET() { return getToken(ParserRulesParser.LSQUAREBRACKET, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RSQUAREBRACKET() { return getToken(ParserRulesParser.RSQUAREBRACKET, 0); }
		public ArrayAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayAssignment; }
	}

	public final ArrayAssignmentContext arrayAssignment() throws RecognitionException {
		ArrayAssignmentContext _localctx = new ArrayAssignmentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_arrayAssignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			match(IDENTIFIER);
			setState(175);
			match(EQUAL);
			setState(176);
			match(TYPE);
			setState(177);
			match(LSQUAREBRACKET);
			setState(178);
			expression();
			setState(179);
			match(RSQUAREBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public SwitchStatementContext switchStatement() {
			return getRuleContext(SwitchStatementContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public ArrayDeclarationContext arrayDeclaration() {
			return getRuleContext(ArrayDeclarationContext.class,0);
		}
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public DoWhileStatementContext doWhileStatement() {
			return getRuleContext(DoWhileStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public ContinueStatementContext continueStatement() {
			return getRuleContext(ContinueStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_statement);
		try {
			setState(192);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(181);
				switchStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(182);
				variableDeclaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(183);
				arrayDeclaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(184);
				expressionStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(185);
				whileStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(186);
				block();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(187);
				forStatement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(188);
				doWhileStatement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(189);
				returnStatement();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(190);
				breakStatement();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(191);
				continueStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LCURLYBRACKET() { return getToken(ParserRulesParser.LCURLYBRACKET, 0); }
		public TerminalNode RCURLYBRACKET() { return getToken(ParserRulesParser.RCURLYBRACKET, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			match(LCURLYBRACKET);
			setState(198);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 20644379756L) != 0)) {
				{
				{
				setState(195);
				statement();
				}
				}
				setState(200);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(201);
			match(RCURLYBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionStatementContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(ParserRulesParser.SEMICOLON, 0); }
		public ExpressionStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionStatement; }
	}

	public final ExpressionStatementContext expressionStatement() throws RecognitionException {
		ExpressionStatementContext _localctx = new ExpressionStatementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expressionStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			expression();
			setState(204);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
